2015-11-30  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal-data-local.h (e_platform_t): Add esim handle.
	* e-hal/src/epiphany-hal-data.h (e_epiphany_t): Likewise.
	(e_mem_t): Likewise.
	* e-hal/src/epiphany-hal.c [ESIM_BACKEND]: Include esim.h
	(e_open) [ESIM_BACKEND]: Call es_slave_connect().
	[!ESIM_BACKEND]: Make calls to mmap() / open() conditional.
	(e_close) [!ESIM_BACKEND]: Make calls to munmap() / close()
	conditional.
	(ee_read_word) [ESIM_BACKEND]: Add esim implementation.
	(ee_write_word) [ESIM_BACKEND]: Likewise.
	(ee_read_buf) [ESIM_BACKEND]: Likewise.
	(ee_write_buf) [ESIM_BACKEND]: Likewise.
	(ee_read_reg) [ESIM_BACKEND]: Likewise.
	(ee_write_reg) [ESIM_BACKEND]: Likewise.
	(ee_mread_word) [ESIM_BACKEND]: Likewise.
	(ee_mwrite_word) [ESIM_BACKEND]: Likewise.
	(ee_mread_buf) [ESIM_BACKEND]: Likewise.
	(ee_mwrite_buf) [ESIM_BACKEND]: Likewise.
	(ee_read_esys) [ESIM_BACKEND]: Add ESIM placeholder. Return error.
	(ee_write_esys) [ESIM_BACKEND]: Likewise.
	(e_reset_system) [ESIM_BACKEND]: Add esim implementation.

2015-11-20-2015-11-23  Ola Jeppsson  <ola@adapteva.com>

	Major refactoring.
	Switch to Autotools based build system.
	* e-utils: Moved from src/e-utils. Split trace stuff into...
	* e-trace: ...added.
	* e-hal: Moved from src/e-hal.
	* src/e-loader: Code moved into e-hal.
	* src/e-memman: Code moved into e-hal.
	* e-server: Moved from src/e-server.
	* e-xml: Moved from src/e-xml.
	* e-lib: Moved from src/e-lib.

2015-09-18  Ola Jeppsson  <ola@adapteva.com>

	* src/e-loader/src/e-loader.c: Convert line endings from DOS
	to UNIX.

2015-09-07  Ola Jeppsson  <ola@adapteva.com>

	* bsps/parallella64/fast.ldf: Adjust for Epiphany GCC
	__USER_LABEL_PREFIX__ change from "_" to "".
	* bsps/parallella64/internal.ldf: Likewise.
	* bsps/parallella64/legacy.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/fast.ldf: Likewise.
	* bsps/parallella_E16G3_1GB/internal.ldf: Likewise.
	* src/e-lib/src/e_ctimer_get.s: Likewise.